Changelog
=========


2.1.3 (unreleased)
------------------

- Updated PowerPoint templates with new corporate design
  [lgraf]


2.1.2 (2012-02-27)
------------------

- Give admin group also the global role 'Editor' and 'Role Manager',
  they sould be able to modified the objects and permissions.
  [phgross]

- Give admin group also the global role 'Member', so the ExposatorViewlet wouldn't be displayed.
  Issue #1367 Administrator-Gruppe und -Rollen implementieren
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1367
  [phgross]

- Give admin group 'Administrator' role instead of 'Manager'
  [lgraf]

- Setup wizard: respect "local_roles" configuration in clients.
  [jone]

- Setup wizard: respect "active" configuration in clients.
  [jone]


2.1.1 (2011-12-06)
------------------

- Added rolemanager_group attribute to client setup form.
  Users in this group will automatically be assigned the "Role Manager" role.
  [lgraf]

- Made the local_roles setting on the repository root configurable.
  [phgross]

- changed reader_group default from og_mandantid_lesen to og_mandantid_leser.
  [phgross]

2.1 (2011-11-29)
----------------

- Added reader_group attribute to the client setup form.
  The og setup automaticlly sets the Member role for the reader_group in the portal_role_manager
  [phgross]


2.0 (2011-11-17)
----------------

- Displaying current OGDS and ZODB config on client setup screen
  [lgraf]

- Adjust the og-setup process:
  Automaticly set global Member role for the client users group.
  Issue #1269 Ordnungspositionen fuer alle Mitglieder eines Mandanten sichtbar machen
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1269/
  [phgross]

- Removed mail_settings import-step it isnt needed anymore. email_from_address now gets generated from value entered in entry point in the right policy package.
  #1204 Absender E-Mail Addresse anpassen